--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,7 @@
 					th:href="@{/pedidos}">Pedidos <span class="sr-only">(página
 							atual)</span></a></li>
 				<li class="nav-item active"><a class="nav-link"
-					th:href="@{/rh/pessoas}">Clientes <span class="sr-only">(página
+					th:href="@{/clientes}">Clientes <span class="sr-only">(página
 							atual)</span></a></li>
 				<li class="nav-item active"><a class="nav-link"
 					th:href="@{/produtos}">Produtos <span class="sr-only">(página
