--- a/src/main/resources/templates/vendas/index2.html
+++ b/src/main/resources/templates/vendas/index2.html
@@ -41,7 +41,7 @@
   <div class="container my-2">
 
 
-    <form action="#" th:action="@{/vendas/venda}" th:object="${venda}" method="POST">
+    <form action="#" th:action="@{/vendas/novo}" th:object="${venda}" method="POST">
       <input type="hidden" id="id" th:field="*{id}" />
 
 
