--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -30,6 +30,13 @@
 				<li class="nav-item active"><a class="nav-link"
 					th:href="@{/vendas}">Vendas <span class="sr-only">(página
 							atual)</span></a></li>
+				
+				<li class="nav-item active"><a class="nav-link" href="javascript: document.logoutForm.submit()" role="menuitem">Sair
+					<form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
+						<input hidden type="submit" value="Sign Out"/>
+					</form>
+					<span class="sr-only">(página atual)</span></a></li>
+				
 
 			</ul>
 		</div>
