--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 
 <body>
 	<br/><br/>
-	<div layout:fragment="content" style="border: 10px green solid; background-color: gray;" class="table table-striped table-responsive-md">
+	<div layout:fragment="content" style="border: 20px solid gray; border-radius: 40px;" class="table table-striped table-responsive-md">
 	<center>
     <form class="form-signin" th:action="@{/login}" th:object="${user}" method="post">
         <h2 class="form-signin-heading">LOGIN</h2>
@@ -36,8 +36,9 @@
     
     </center>
 	</div>
-	<div th:if="${param.logout}"><h2>Você encerrou seu acesso. Obrigado!</h2></div>
-
+	<br/><br/>
+	<div th:if="${param.logout}"><center><h2>Você encerrou seu acesso. Obrigado!</h2></center></div>
+	
 <!-- 
 		<div th:if="${param.error}">
             Usuário e/ou senha inválidos.
