--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
+
 
 <head>...
 </head>
@@ -7,7 +8,9 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light"
 		th:fragment="header">
-		<a class="navbar-brand" href="http://localhost:8080/"><strong>Mercearia Pro</strong></a>
+		
+		<a class="navbar-brand" href="http://localhost:8080/"><strong>Mercearia
+				Pro</strong></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#conteudoNavbarSuportado"
 			aria-controls="conteudoNavbarSuportado" aria-expanded="false"
@@ -17,20 +20,19 @@
 
 		<div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
 			<ul class="navbar-nav mr-auto">
-				
-				<li class="nav-item active"><a class="nav-link"
+				<li th:classappend="${#httpServletRequest.getRequestURI() == '/vendas' ? 'active':''}"  class="nav-item ">
+				<a class="nav-link " th:href="@{/vendas}">Vendas
+						<span class="sr-only">(página atual)</span>
+				</a></li>
+				<li class="nav-item" th:classappend="${#httpServletRequest.getRequestURI() == '/clientes' ? 'active':''}"><a class="nav-link" 
 					th:href="@{/clientes}">Clientes <span class="sr-only">(página
 							atual)</span></a></li>
-				<li class="nav-item active"><a class="nav-link"
+				<li class="nav-item " th:classappend="${#httpServletRequest.getRequestURI() == '/produtos' ? 'active':''}"><a class="nav-link"
 					th:href="@{/produtos}">Produtos <span class="sr-only">(página
 							atual)</span></a></li>
-				<li class="nav-item active"><a class="nav-link"
-					th:href="@{/pedidos}">Pedidos <span class="sr-only">(página
+							<li class="nav-item " th:classappend="${#httpServletRequest.getRequestURI() == '/estoque' ? 'active':''}"><a class="nav-link"
+					th:href="@{/estoque}">Estoque <span class="sr-only">(página
 							atual)</span></a></li>
-				<li class="nav-item active"><a class="nav-link"
-					th:href="@{/vendas}">Vendas <span class="sr-only">(página
-							atual)</span></a></li>
-
 			</ul>
 		</div>
 	</nav>
