--- a/src/main/resources/templates/vendas/index.html
+++ b/src/main/resources/templates/vendas/index.html
@@ -2,83 +2,93 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="UTF-8" />
-  <title>Sistema de Gestão de Mercearia</title>
+<meta charset="UTF-8" />
+<title>Sistema de Gestão de Mercearia</title>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+	integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+	crossorigin="anonymous" />
+<link rel="stylesheet"
+	href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
 
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
-    integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js"
+	integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+	crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+	integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
+	crossorigin="anonymous"></script>
 </head>
 
 <script type="text/javascript">
-  $(function () {
+	$(function() {
 
-    $(".callConfirm").on("click", function (e) {
-				if (!confirm("Deseja realmente remover esse item?")) {
-					e.preventDefault();
-				}
-			});
+		$(".callConfirm").on("click", function(e) {
+			if (!confirm("Deseja realmente remover esse item?")) {
+				e.preventDefault();
+			}
+		});
 
-    $("#nomePessoa").autocomplete({
-      source: "vendas/pessoasNomeAutoComplete",
-      minLength: 0,
-      select: function (event, ui) {
-        this.value = ui.item.label;
-        $("#idPessoa").val(ui.item.value);
-        return false;
-      },
-    });
-  });
+		$("#nomePessoa").autocomplete({
+			source : "vendas/pessoasNomeAutoComplete",
+			minLength : 0,
+			select : function(event, ui) {
+				this.value = ui.item.label;
+				$("#idPessoa").val(ui.item.value);
+				return false;
+			},
+		});
+	});
 </script>
 
 <body>
-  <div th:replace="fragments/header :: header"></div>
-  <div class="container my-2">
+	<div th:replace="fragments/header :: header"></div>
+	<div class="container my-2">
 
 
-    <form action="#" th:action="@{/vendas/venda}" th:object="${venda}" method="POST">
-      <input type="hidden" id="id" th:field="*{id}" />
+		<form action="#" th:action="@{/vendas/venda}" th:object="${venda}"
+			method="POST">
+			<input type="hidden" id="id" th:field="*{id}" />
 
 
-      <div class="row">
-        
-    
-        <div class="col-sm-3" style='text-align: left;'>
-          <br>
-          <button type="submit" class="btn btn-info ">Nova Venda</button>
-        </div>
-      </div>
-    </form>
+			<div class="row">
 
-    <h1>Vendas</h1>
-    <table border="1" class="table table-striped table-responsive-md">
-      <thead>
-        <tr>
-          
-          <th>Data</th>
 
-          <th>Ações</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr th:each="venda : ${listaVendas}">
-          
-          
-          <td th:text="${#temporals.format(venda.getData(), 'dd/MM/yyyy HH:mm')}"></td>
+				<div class="col-sm-3" style='text-align: left;'>
+					<br>
+					<button type="submit" class="btn btn-info ">Nova Venda</button>
+				</div>
+			</div>
+		</form>
 
-          <td>
-            <a th:href="@{/vendas/{id}(id=${venda.id})}" class="btn btn-primary">Alterar</a>
-            <a th:href="@{/vendas/excluir/{id}(id=${venda.id})}" class="btn btn-danger callConfirm">Excluir</a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+		<h1>Vendas</h1>
+		<table border="1" class="table table-striped table-responsive-md">
+			<thead>
+				<tr>
+					<th>Nome</th>
+						<th>Total</th>
+					<th>Data</th>
+				
+
+					<th>Ações</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="venda : ${listaVendas}">
+
+					<td th:text="${venda.getNomeCliente()}"></td>
+					<td style="text-align: right" th:text="${venda.getSomatorioTotal()}"></td>
+					<td
+						th:text="${#temporals.format(venda.getData(), 'dd/MM/yyyy HH:mm')}"></td>
+
+					<td><a th:href="@{/vendas/{id}(id=${venda.id})}"
+						class="btn btn-primary">Alterar</a> <a
+						th:href="@{/vendas/excluir/{id}(id=${venda.id})}"
+						class="btn btn-danger callConfirm">Excluir</a></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </body>
 
 </html>
