Mostrar nome usuário

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -45,8 +45,8 @@
 							<input hidden type="submit" value="Sign Out" />
 						</form> <span class="sr-only">(página atual)</span>
 				</a></li>
-
 			</ul>
+			<a class="nav-link"><p th:inline="text">Ola [[${#httpServletRequest.remoteUser}]]</p></a>
 		</div>
 	</nav>
 </body>
