--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,10 +41,10 @@
 	</div>
 	<div style="border: 4px solid gray; border-radius: 20px;">
 		<center>
+		<a href="http://localhost:8080/vendas">Vendas</a>
 		<a href="http://localhost:8080/clientes">Clientes</a>
 		<a href="http://localhost:8080/produtos">Produtos</a>
-		<a href="http://localhost:8080/pedidos">Pedidos</a>
-		<a href="http://localhost:8080/vendas">Vendas</a>
+		<a href="http://localhost:8080/estoque">Estoque</a>
 		</center>
 	</div>
 	<!--<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
